--- a/mi/styles.css
+++ b/mi/styles.css
@@ -185,7 +185,6 @@ input {
 }
 .nav_box {
   height: 100px;
-  position: relative;
   z-index: 99;
 }
 .nav_box .logo {
@@ -282,13 +281,52 @@ input {
   margin-left: 178px;
 }
 .nav_box .nav_center > li {
-  position: relative;
   float: left;
 }
-.nav_box .nav_center > li:hover .nav_menu_bgc {
-  display: block;
-  border-top: 1px solid;
-  height: 230px;
+.nav_box .nav_center > li .nav_menu {
+  position: absolute;
+  left: 0;
+  top: 140px;
+  width: 100%;
+  height: 0;
+  border-top: 0px solid #e0e0e0;
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0);
+  background-color: #fff;
+  z-index: 9999;
+  transition: 0.3s;
+  overflow: hidden;
+}
+.nav_box .nav_center > li .nav_menu > ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+.nav_box .nav_center > li .nav_menu > ul li {
+  margin-top: 30px;
+}
+.nav_box .nav_center > li .nav_menu > ul li:nth-child(2n) {
+  width: 1px;
+  height: 100px;
+  background-color: #e0e0e0;
+}
+.nav_box .nav_center > li .nav_menu > ul li a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+}
+.nav_box .nav_center > li .nav_menu > ul li a img {
+  width: 160px;
+  height: 110px;
+  margin-bottom: 20px;
+}
+.nav_box .nav_center > li .nav_menu > ul li a img + p {
+  color: #424242;
+}
+.nav_box .nav_center > li .nav_menu > ul li a p {
+  line-height: 0;
+  margin: 10px 0;
+  color: #FF6700;
+  font-size: 12px;
 }
 .nav_box .nav_center > li:hover a {
   color: #FF6700;
@@ -296,6 +334,11 @@ input {
 .nav_box .nav_center > li:hover::after {
   height: 230px;
   border-top: 1px solid #E0E0E0;
+}
+.nav_box .nav_center > li:hover .nav_menu {
+  height: 230px;
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
+  border-top-width: 1px;
 }
 .nav_box .nav_center > li a {
   color: black;
