--- a/mi/styles.less
+++ b/mi/styles.less
@@ -235,7 +235,6 @@ input {
 
 .nav_box {
   height: 100px;
-  position: relative;
   z-index: 99;
 
   .logo {
@@ -350,16 +349,63 @@ input {
     margin-left: 178px;
 
     >li {
-      position: relative;
       float: left;
 
-      &:hover {
-        .nav_menu_bgc {
-          display: block;
-          border-top: 1px solid;
-          height: 230px;
-        }
+      .nav_menu {
+        position: absolute;
+        left: 0;
+        top: 140px;
+        width: 100%;
+        height: 0;
+        border-top: 0px solid #e0e0e0;
+        box-shadow: 0 4px 5px rgba(0, 0, 0, .0);
+        background-color: #fff;
+        z-index: 9999;
+        transition: .3s;
+        overflow: hidden;
 
+        >ul {
+          display: flex;
+          justify-content: space-evenly;
+
+          li {
+            margin-top: 30px;
+
+            &:nth-child(2n) {
+              width: 1px;
+              height: 100px;
+              background-color: #e0e0e0;
+            }
+
+            a {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              padding: 0;
+
+              img {
+                width: 160px;
+                height: 110px;
+                margin-bottom: 20px;
+
+
+                +p {
+                  color: #424242;
+                }
+              }
+
+              p {
+                line-height: 0;
+                margin: 10px 0;
+                color: #FF6700;
+                font-size: 12px;
+              }
+            }
+          }
+        }
+      }
+
+      &:hover {
         a {
           color: #FF6700;
         }
@@ -367,6 +413,12 @@ input {
         &::after {
           height: 230px;
           border-top: 1px solid #E0E0E0;
+        }
+
+        .nav_menu {
+          height: 230px;
+          box-shadow: 0 4px 5px rgba(0, 0, 0, .3);
+          border-top-width: 1px;
         }
       }
 
