--- a/mi/styles.less
+++ b/mi/styles.less
@@ -301,6 +301,7 @@ input {
         position: absolute;
         margin-top: 50px;
         background-color: #fff;
+        z-index: 9999;
 
         li {
           &:last-child {
