--- a/mi/font/iconfont.css
+++ b/mi/font/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1681013839629') format('truetype');
+  src: url('iconfont.ttf?t=1681528342805') format('truetype');
 }
 
 .iconfont {
@@ -45,5 +45,9 @@
 
 .icon-xiaoxi:before {
   content: "\e7a8";
+}
+
+.icon-tiaozhuan:before {
+  content: "\e603";
 }
 
