--- a/mi/styles.less
+++ b/mi/styles.less
@@ -773,14 +773,17 @@ main {
         width: 100%;
       }
 
+      li {
+        transform: translateY(0);
+        transition: .3s;
+      }
+
       li:hover {
+        transform: translateY(-5px);
         box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
       }
 
       ul:first-child {
-
-
-
         li {
           width: 234px;
           height: 614px;
@@ -836,6 +839,186 @@ main {
             }
           }
 
+        }
+      }
+    }
+  }
+
+  div.box1 {
+    margin-top: 20px;
+
+    .box1_hd {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #333;
+      height: 58px;
+
+      h1 {
+        font-size: 22px;
+      }
+
+      a {
+        font-size: 16px;
+        color: #333;
+
+        &:hover {
+          color: #FF6700;
+
+          &::after {
+            background-color: #FF6700;
+          }
+        }
+
+        &::after {
+          content: '\e6a2';
+          font-family: "iconfont";
+          width: 20px;
+          height: 20px;
+          font-size: 12px;
+          padding: 4px;
+          margin-left: 4px;
+          line-height: 12px;
+          vertical-align: 1px;
+          background-color: #B0B0B0;
+          border-radius: 99px;
+          color: #FFF;
+
+        }
+      }
+
+
+    }
+
+    .box1_bd {
+      ul {
+        display: grid;
+        grid-template-rows: repeat(4, 153.5px);
+        grid-template-columns: repeat(5, 234px);
+        justify-content: space-between;
+
+        li:not(:nth-child(n+9)) {
+          grid-row: span 2;
+
+          img {
+            width: 160px;
+            height: 160px;
+          }
+        }
+
+        li:nth-child(n+6) {
+          a {
+            margin-top: 7px;
+          }
+        }
+
+        li:not(:first-child) {
+          a {
+            display: flex;
+            width: 234px;
+            height: 260px;
+            padding: 20px 0;
+            background-color: #fff;
+            flex-direction: column;
+            align-items: center;
+
+            h3 {
+              margin-top: 20px;
+              color: #333;
+              font-size: 14px;
+
+              &+p {
+                margin: 5px 0;
+                font-size: 12px;
+
+                &+p {
+                  margin-top: 5px;
+                  color: #FF6700;
+
+                  span {
+                    margin-left: 8px;
+                    text-decoration: line-through;
+                    color: #b0b0b0;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        li:first-child {
+          grid-row: 1/5;
+
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        li:nth-child(9),
+        li:last-child {
+          a {
+            position: relative;
+            display: block;
+            height: 93px;
+            padding: 25px 0;
+
+            h3 {
+              margin: 0 110px 0 30px;
+
+              +p {
+                margin-left: 30px;
+                font-size: 14px;
+                color: #FF6700;
+              }
+            }
+
+            img {
+              position: absolute;
+              right: 10px;
+              top: 20px;
+              width: 80px;
+              height: 80px;
+            }
+          }
+
+        }
+
+        li:last-child {
+          a {
+            position: relative;
+            margin-top: 10.5px;
+
+            h3 {
+              margin-top: 20px;
+              font-size: 18px !important;
+              font-weight: 400;
+
+              +p {
+                font-size: 12px;
+                color: #B0B0B0;
+
+                +i {
+                  position: absolute;
+                  right: 30px;
+                  top: 30px;
+                  font-size: 60px;
+                  color: #FF6700;
+                }
+              }
+            }
+          }
+
+        }
+
+        li {
+          transform: translateY(0);
+          transition: .3s;
+
+          &:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+          }
         }
       }
     }
@@ -1057,5 +1240,116 @@ footer {
     height: 19px;
     text-align: center;
     margin-top: 45px;
+  }
+}
+
+.fixed {
+  position: fixed;
+  right: 0;
+  bottom: 140px;
+  z-index: 9999;
+
+  ul {
+    display: grid;
+    grid-template-rows: repeat(6, 90px);
+
+    li {
+      width: 82px;
+      background-color: #fff;
+      margin-top: -1px;
+      border: 1px solid #f5f5f5;
+
+      &:hover {
+        a {
+          img:first-child {
+            display: none;
+          }
+
+          img:last-child {
+            display: block;
+          }
+
+          color: #FF6700;
+        }
+      }
+
+      a {
+        margin: 15px 0;
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+
+        img {
+          margin: 5px 0;
+          width: 30px;
+          height: 30px;
+
+          &:last-child {
+            display: none;
+          }
+        }
+
+
+
+        color: #424242;
+      }
+
+      &:last-child {
+        height: 90px;
+        margin-top: 20px;
+      }
+
+      &:first-child {
+        position: relative;
+
+        &:hover {
+          &::after {
+            display: block;
+          }
+
+          div {
+            visibility: visible;
+          }
+        }
+
+        div {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          position: absolute;
+          width: 120px;
+          height: 200px;
+          background-color: #fff;
+          border: 1px solid #f5f5f5;
+          top: 0;
+          left: -170%;
+          visibility: hidden;
+
+          span {
+            width: 80px;
+            color: #424242;
+
+            &::after {
+              content: '';
+              display: block;
+              position: absolute;
+              top: 35px;
+              right: -20px;
+              border-top: 10px solid transparent;
+              border-right: 10px solid transparent;
+              border-bottom: 10px solid transparent;
+              border-left: 10px solid #fff;
+            }
+          }
+
+          img {
+            margin-top: 20px;
+            width: 100px;
+            height: 100px;
+
+          }
+        }
+      }
+    }
   }
 }
